# giv

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: giv.rb.template
docs/: homebrew-release.md
scripts/: generate-homebrew-formula.sh  release-check.sh
src/: debug.rs  lib.rs  main.rs  test_backend.rs  tests.rs
src/core/: action.rs  app.rs  clipboard.rs  config.rs  dialog.rs  effect.rs  event.rs  keymap.rs  mod.rs  palette.rs  runtime.rs  search.rs  theme.rs  update.rs
src/features/: mod.rs
src/features/branches/: keymap.rs  mod.rs  update.rs  view.rs
src/features/graph/: keymap.rs  layout.rs  mod.rs  rebase_todo.rs  render.rs  update.rs  view.rs
src/features/inspect/: keymap.rs  mod.rs  state.rs  update.rs  view.rs
src/features/stashes/: keymap.rs  mod.rs  update.rs  view.rs
src/features/status/: keymap.rs  mod.rs  update.rs  view.rs
src/features/worktrees/: keymap.rs  mod.rs  update.rs  view.rs
src/git/: diff.rs  mod.rs  types.rs
src/git/cli/: mod.rs  parse.rs
src/ui/: dashboard.rs  diff_view.rs  layout.rs  mod.rs
src/ui/chrome/: mod.rs  statusbar.rs
src/ui/overlay/: command_palette.rs  confirm_dialog.rs  help.rs  mod.rs  modal.rs
tests/: network_integration.rs  ops_integration.rs
