[package]
name = "giv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A pure Rust terminal UI for visualizing and operating on Git repositories."
readme = "README.md"
repository = "https://github.com/shogoisaji/giv"
homepage = "https://github.com/shogoisaji/giv"
rust-version = "1.85"
keywords = ["git", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".DS_Store",
    "AGENTS.md",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "giv"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
directories = "6"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
smallvec = "1"
